Fix alignment of timeline pointer on desktop

--- a/css/vertical-timeline.scss
+++ b/css/vertical-timeline.scss
@@ -290,7 +290,7 @@ html.cssanimations {
             -webkit-transform: translateZ(0);
             -webkit-backface-visibility: hidden;
             ~ .cd-timeline-content::before {
-                top: 12px;
+                top: 19px;
             }
             .fa {
                 display: inline-block;
